Added the rest of the programming examples.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 DotNet/XmlToJsonConversion/.vscode/
 DotNet/XmlToJsonConversion/bin/
 DotNet/XmlToJsonConversion/obj/
+JavaScript/ExpressDemo1/node_modules/
+JavaScript/ExpressWebApiDemo/node_modules/
